Add GET method to OpenAPI spec.
